@@ -110,8 +110,6 @@ public class AuthenticationWithPersistentSessionsIT implements AuthenticationTes
 
   @Autowired private TestRestTemplate testRestTemplate;
 
-  @Autowired private OperateProperties operateProperties;
-
   @MockBean private IdentityService identityService;
 
   @Test
@@ -127,6 +125,7 @@ public class AuthenticationWithPersistentSessionsIT implements AuthenticationTes
   public void testLoginSuccess() throws Exception {
     // Step 1 try to access document root
     ResponseEntity<String> response = get(ROOT);
+    assertThatCookiesAndSecurityHeadersAreSet(response);
     final HttpEntity<?> cookies = httpEntityWithCookie(response);
 
     assertThatRequestIsRedirectedTo(response, urlFor(LOGIN_RESOURCE));
@@ -149,8 +148,6 @@ public class AuthenticationWithPersistentSessionsIT implements AuthenticationTes
     assertThatRequestIsRedirectedTo(response, urlFor(ROOT));
     // Step 5  check if access to url possible
     response = get(ROOT, cookies);
-    assertThatCookiesAndSecurityHeadersAreSet(
-        response, operateProperties.isCsrfPreventionEnabled());
     assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
   }
 
@@ -158,6 +155,7 @@ public class AuthenticationWithPersistentSessionsIT implements AuthenticationTes
   public void testLoginFailedWithNoPermissions() throws Exception {
     // Step 1 try to access document root
     ResponseEntity<String> response = get(ROOT);
+    assertThatCookiesAndSecurityHeadersAreSet(response);
     final HttpEntity<?> cookies = httpEntityWithCookie(response);
 
     assertThatRequestIsRedirectedTo(response, urlFor(LOGIN_RESOURCE));
@@ -184,6 +182,7 @@ public class AuthenticationWithPersistentSessionsIT implements AuthenticationTes
   public void testLoginFailedWithNoReadPermissions() throws Exception {
     // Step 1 try to access document root
     ResponseEntity<String> response = get(ROOT);
+    assertThatCookiesAndSecurityHeadersAreSet(response);
     final HttpEntity<?> cookies = httpEntityWithCookie(response);
 
     assertThatRequestIsRedirectedTo(response, urlFor(LOGIN_RESOURCE));
@@ -212,7 +211,7 @@ public class AuthenticationWithPersistentSessionsIT implements AuthenticationTes
 
   private HttpEntity<?> httpEntityWithCookie(final ResponseEntity<String> response) {
     final HttpHeaders headers = new HttpHeaders();
-    headers.add("Cookie", getCookies(response).getFirst());
+    headers.add("Cookie", getCookies(response).get(0));
     return new HttpEntity<>(new HashMap<>(), headers);
   }
 
